# test-flasky-ui

./: .gitignore  README.md  pyproject.toml  run.sh
resources/: common_resources.robot
resources/pages/: header_component.robot  index_page.robot  login_error_page.robot  login_page.robot  register_page.robot  user_information_page.robot
resources/test_data/: common_const.py  dynamic_test_data.py
tests/: test_login.robot  test_register.robot  test_user.robot
