[tool.poetry]
name = "test-flasky-ui"
version = "0.1.0"
description = ""
authors = ["Alexey Vershkov <slipgoat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
webdrivermanager = "^0.10.0"
robotframework-seleniumlibrary = "^6.0.0"
robotframework = "^5.0.1"
requests = "^2.28.1"
names = "^0.3.0"
pydantic = "^1.9.2"
robotframework-pabot = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
